--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <h1>This is a Header</h1>
         <p>This is a paragraph</p>
-        <p>This is a second paragraph</p>
+        <p>lite server test</p>
+        <p>this is an new line</p>
     </body>
 </html>
